# howtoVM

./: .gitignore  LICENSE  README.md
Gmsh/: README.md  aneurysm.py  tube_boundary_layer.py
autoMeshing/: README.md  autoMeshing.py  centerline.txt
autoMeshingDeve/: .gitignore  Main.cpp  autoMeshing.h  autoMeshing.sln  autoMeshing.vcxproj  autoMeshing.vcxproj.filters  console.cpp  console.h  stl.cpp  stl.h  t10.msh  test.cpp  test.h
autoMeshingDeve/autoMeshing/x64/Debug/: autoMeshing.exe.recipe  autoMeshing.ilk  vc143.idb
autoMeshingDeve/autoMeshing/x64/Debug/autoMeshing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  autoMeshing.lastbuildstate  link.command.1.tlog  (+3 more)
autoMeshingDeve/python/: .gitignore  cell.py  config.py  edge.py  main.py  models.py  mygmsh.py  myio.py  mylib.py  node.py  tetra.py  utility.py
autoMeshingDeveloping/autoMeshing/: Main.cpp  autoMeshing.h  autoMeshing.sln  autoMeshing.vcxproj  console.cpp  test.cpp  test.h
extractCenterline/: README.md  usage.pptx
fillHoles/: README.md
fillHoles/fillHoles_vascular/: .gitignore  ActiViz.Examples.csproj  ActiViz.Examples.sln  Form1.Designer.cs  Form1.cs  Program.cs  packages.config
fillHoles/fillHoles_vascular/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
fillHoles/tutrial/: Form1.Designer.cs  Form1.cs  Program.cs
fillHoles/tutrial/output/: filled_output.vtp
maketube/: CMakeLists.txt  TubesFromSplines.cpp
planecut/: README.md  centerline.txt  clipper_fillhole.py  clipper_open.py  clipper_vtk.py
vmtkSetup/: README.md  setup.pptx
(+12 files in other folders)
